--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 .idea/workspace.xml
+src/META-INF/MANIFEST.MF
+.idea/artifacts/TD_jar.xml
+.idea/artifacts/TD_jar.xml
+src/META-INF/MANIFEST.MF
